--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,18 +1,1 @@
-<div class="container">
-  <h2>Hello {{nick}}!</h2>
-  <form (ngSubmit)="sendMessage()" #chatForm="ngForm">
-    <div>
-      <label for="message">Message</label>
-      <input type="text" id="message" name="message" [(ngModel)]="message" required>
-    </div>
-    <button type="submit" id="sendmessage" [disabled]="!chatForm.valid">
-      Send
-    </button>
-  </form>
-</div>
-
-<div class="container" *ngIf="messages.length > 0">
-  <div *ngFor="let message of messages">
-    <span>{{message}}</span>
-  </div>
-</div>
+<router-outlet></router-outlet>
