adjust signalR sending message format

--- a/client/src/app/display/display.component.html
+++ b/client/src/app/display/display.component.html
@@ -1,5 +1,5 @@
 <div [@listAnimation]="messages.length">
   <div *ngFor="let message of messages">
-    {{ message }}
+    {{ message.message }}
   </div>
 </div>
