加入動態改變顯示位置功能

--- a/client/src/app/display/display.component.html
+++ b/client/src/app/display/display.component.html
@@ -1,5 +1,5 @@
 <div [@listAnimation]="messages.length">
-  <div *ngFor="let message of messages">
+  <section *ngFor="let message of messages" [ngStyle]="message.style">
     {{ message.message }}
-  </div>
+  </section>
 </div>
