--- a/client/src/app/display/display.component.css
+++ b/client/src/app/display/display.component.css
@@ -1,4 +1,24 @@
-div {
+:host {
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: lightblue;
+}
+
+section {
+  display: inline;
   font-size: 60px;
   color: red;
+  position: absolute;
+}
+
+.card1 {
+}
+
+.card2 {
+}
+.card3 {
+}
+.card4 {
 }
