--- a/client/src/app/display/display.component.css
+++ b/client/src/app/display/display.component.css
@@ -3,12 +3,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: lightblue;
 }
 
-section {
-  display: inline;
-  font-size: 60px;
-  color: red;
+div {
   position: absolute;
 }
