--- a/client/src/app/guest/guest.component.css
+++ b/client/src/app/guest/guest.component.css
@@ -5,3 +5,16 @@
 .page-header {
   font-weight: bold;
 }
+
+.btn {
+  margin: 0 0.5em 0.5em 0px;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
+  margin-top: 60px;
+}
+.grid button {
+  display: block;
+  padding: 2em 0px;
+}
