--- a/client/src/app/guest/guest.component.html
+++ b/client/src/app/guest/guest.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+    <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
       <!-- 描述文字 -->
       <div class="page-header">
         <h1>對直播主吐槽吧
@@ -17,10 +17,12 @@
       </form>
 
       <!-- 罐頭訊息 -->
-      <button class="btn btn-lg btn-danger" (click)="sendMessage('斗內時間')">斗內時間</button>
-      <button class="btn btn-lg btn-warning" (click)="sendMessage('哈哈哈')">哈哈哈</button>
-      <button class="btn btn-lg btn-success" (click)="sendMessage('咬我啊')">咬我啊</button>
-      <button class="btn btn-lg btn-primary" (click)="sendMessage('77777777')">77777777</button>
+      <div class="grid">
+        <button class="btn btn-lg" *ngFor="let button of buttons$ | async" [ngClass]="button.colorClass" (click)="sendMessage(button.value)"
+          [ngStyle]="button.style">
+          {{ button.label }}
+        </button>
+      </div>
     </div>
   </div>
 </div>
