加入字幕控制中心

--- a/client/src/app/caption/panel/panel.component.html
+++ b/client/src/app/caption/panel/panel.component.html
@@ -6,6 +6,7 @@
         <h1>對直播主吐槽吧
           <small>真是好吐槽啊</small>
         </h1>
+        <a href="{{ displayUrl }}" target="_blank">顯示畫面</a>
       </div>
 
       <!-- 表單區 -->
