--- a/client/src/app/caption/panel/panel.component.html
+++ b/client/src/app/caption/panel/panel.component.html
@@ -8,7 +8,6 @@
         </h1>
         <a href="{{ displayUrl }}" target="_blank">顯示畫面</a>
       </div>
-
       <!-- 表單區 -->
       <form>
         <div class="form-group form-group-lg">
@@ -18,12 +17,15 @@
       </form>
 
       <!-- 罐頭訊息 -->
-      <div class="grid">
-        <button class="btn btn-lg" *ngFor="let button of buttons$ | async" [ngClass]="button.colorClass" (click)="sendMessage(button.value)"
+      <div class="grid" *ngIf="buttons$ | async as buttons; else loading">
+        <button class="btn btn-lg" *ngFor="let button of buttons" [ngClass]="button.colorClass" (click)="sendMessage(button.value)"
           [ngStyle]="button.style">
           {{ button.label }}
         </button>
       </div>
+      <ng-template #loading>
+        Loading....
+      </ng-template>
     </div>
   </div>
 </div>
