--- a/client/src/app/caption/panel/panel.component.html
+++ b/client/src/app/caption/panel/panel.component.html
@@ -6,7 +6,7 @@
         <h1>對直播主吐槽吧
           <small>真是好吐槽啊</small>
         </h1>
-        <a href="{{ displayUrl }}" target="_blank">顯示畫面</a>
+        <a href="{{ displayUrl$ | async }}" target="_blank">顯示畫面</a>
       </div>
       <!-- 表單區 -->
       <form>
@@ -17,10 +17,10 @@
       </form>
 
       <!-- 罐頭訊息 -->
-      <div class="grid" *ngIf="buttons$ | async as buttons; else loading">
-        <button class="btn btn-lg" *ngFor="let button of buttons" [ngClass]="button.colorClass" (click)="sendMessage(button.value)"
-          [ngStyle]="button.style">
-          {{ button.label }}
+      <div class="grid" *ngIf="items$ | async as items; else loading">
+        <button class="btn btn-lg" *ngFor="let item of items" [ngClass]="item.colorClass" (click)="sendMessage(item.value)"
+          [ngStyle]="item.style">
+          {{ item.label }}
         </button>
       </div>
       <ng-template #loading>
