--- a/client/src/app/caption/panel/panel.component.html
+++ b/client/src/app/caption/panel/panel.component.html
@@ -7,6 +7,7 @@
           <small>真是好吐槽啊</small>
         </h1>
         <a href="{{ displayUrl$ | async }}" target="_blank">顯示畫面</a>
+        <a routerLink="edit" class="btn btn-primary pull-right">編輯</a>
       </div>
       <!-- 表單區 -->
       <form>
