--- a/client/src/app/caption/panel-edit/panel-edit.component.html
+++ b/client/src/app/caption/panel-edit/panel-edit.component.html
@@ -43,8 +43,8 @@
       <section *ngIf="items$ | async as items">
         <button class="btn btn-link ml30" (click)="createCaption()">新增範本</button>
         <ul class="list">
-          <li class="btn btn-block" *ngFor="let caption of items; trackBy: trackByfn" [ngClass]="caption.colorClass" [ngStyle]="caption?.style"
-            (click)="setFormGroup(caption)">
+          <li class="btn btn-block" *ngFor="let caption of items; trackBy: trackByfn" [ngClass]="caption.colorClass"
+            [ngStyle]="caption?.style" (click)="setFormGroup(caption)">
             {{ caption.label }}
           </li>
         </ul>
@@ -57,7 +57,8 @@
           <div class="form-group">
             <label for="label">按鈕文字</label>
             <input type="text" class="form-control" id="label" placeholder="按鈕文字" formControlName="label">
-            <div *ngIf="editGroups.get('label').invalid && (editGroups.get('label').dirty || editGroups.get('label').touched)" class="alert alert-danger">
+            <div *ngIf="editGroups.get('label').invalid && (editGroups.get('label').dirty || editGroups.get('label').touched)"
+              class="alert alert-danger">
               <div *ngIf="editGroups.get('label').hasError('required')">
                 按鈕文字為必填資訊
               </div>
@@ -66,14 +67,15 @@
           <div class="form-group">
             <label for="value">顯示文字</label>
             <input type="text" class="form-control" id="value" placeholder="顯示文字" formControlName="value">
-            <div *ngIf="editGroups.get('value').invalid && (editGroups.get('value').dirty || editGroups.get('value').touched)" class="alert alert-danger">
+            <div *ngIf="editGroups.get('value').invalid && (editGroups.get('value').dirty || editGroups.get('value').touched)"
+              class="alert alert-danger">
               <div *ngIf="editGroups.get('value').hasError('required')">
                 顯示文字為必填資訊
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="colorClass">按鈕顏色</label>
+            <label for="colorClass">按鈕樣式/顯示文字樣式 (可使用自訂全域 CSS 樣式)</label>
             <input type="text" class="form-control" id="label" placeholder="按鈕顏色" formControlName="colorClass">
           </div>
           <div class="form-group">
@@ -81,8 +83,10 @@
             <ace-editor formControlName="style" theme="github" mode="json" style="min-height: 100px; width:100%; overflow: auto;">
             </ace-editor>
           </div>
-          <button type="button" class="btn btn-default" *ngIf="!editGroups.get('id').value" (click)="save()">新增</button>
-          <button type="button" class="btn btn-danger pull-right" *ngIf="editGroups.get('id').value" (click)="remove()">移除</button>
+          <button type="button" class="btn btn-default" *ngIf="!editGroups.get('id').value"
+            (click)="save()">新增</button>
+          <button type="button" class="btn btn-danger pull-right" *ngIf="editGroups.get('id').value"
+            (click)="remove()">移除</button>
         </form>
       </div>
     </div>
