使用 firebase 當作授權檢查服務商

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,26 +1,1 @@
-@using stream_tools.Models
-
-@{
-  ViewData["Title"] = "Index";
-}
-
-<h2>Index</h2>
-
-@inject SignInManager<ApplicationUser> SignInManager
-
-<h2>Lockout</h2>
-
-<form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-  <div>
-    <p>
-      @{
-        var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
-      }
-
-      @foreach (var provider in loginProviders)
-      {
-        <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
-      }
-    </p>
-  </div>
-</form>
+Login page
