use azure signalR, config camelCase

--- a/client/src/app/caption/display/display.component.html
+++ b/client/src/app/caption/display/display.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let message of messages" [ngStyle]="message.Style" class="font-card" [ngClass]="message.ClassName">
-  {{ message.Message }}
+<div *ngFor="let message of messages" [ngStyle]="message.style" class="font-card" [ngClass]="message.className">
+  {{ message.message }}
 </div>
