Add reset winner function

--- a/client/src/app/youtube/chat/chat.component.html
+++ b/client/src/app/youtube/chat/chat.component.html
@@ -45,6 +45,7 @@
         {{ winner.prize }} - {{ winner.winner }}
       </li>
     </ul>
+    <button (click)="resetResult()">重新抽獎</button>
     <button (click)="saveResult()">儲存</button>
   </div>
 </div>
