--- a/client/src/app/youtube/chat/chat.component.html
+++ b/client/src/app/youtube/chat/chat.component.html
@@ -2,20 +2,20 @@
 <ul>
   <li *ngFor="let event of (events$ | async)?.items">
     <button (click)="setLiveChatId(event.snippet.liveChatId, event.snippet.title)">
-      get chat messages
+      取得 {{ event.snippet.title }} 聊天訊息
     </button>
-    {{ event.snippet.title | json }}
+
   </li>
 </ul>
-<button (click)="stop()">Stop watching chat</button>
-
-<h2>聊天訊息</h2>
-<ul>
-  <li *ngFor="let message of messages$ | async; trackBy: mesageTrackByFn">
-    {{ message.displayName }} - {{ message.displayMessage }}
-  </li>
-</ul>
-
+<div *ngIf="isCapturingMessage">
+  <button (click)="stop()">停止監看聊天訊息</button>
+  <h2>聊天訊息</h2>
+  <ul>
+    <li *ngFor="let message of messages$ | async; trackBy: mesageTrackByFn">
+      {{ message.displayName }} - {{ message.displayMessage }}
+    </li>
+  </ul>
+</div>
 <hr />
 <div>
   <h2>活動抽獎</h2>
@@ -23,29 +23,31 @@
   <input type="text" #keyword/>
   <button (click)="startPrizeDraw(keyword.value)" *ngIf="!isEventStart">開始</button>
   <button (click)="stopPrizeDraw()" *ngIf="isEventStart">結束</button>
-  <p>
-    <span *ngIf="startTime">
-      開始時間: {{ startTime | date: 'yyyy/MM/dd h:mm a' }}
-    </span>
-    <span *ngIf="endTime">
-      ~ 結束時間: {{ endTime | date: 'yyyy/MM/dd h:mm a' }}</span>
-  </p>
-  <ul>
-    <li *ngFor="let winner of winnerList$ | async">
-      {{ winner }}
-    </li>
-  </ul>
-  <div *ngIf="endTime">
-    <input type="number" #numberOfwinners placeholder="幾位贏家" value="1" />
-    <input type="text" #prizeItem placeholder="獎項" value="" />
-    <button (click)="drawWinner(numberOfwinners.value, prizeItem.value)">抽獎</button>
-    <h2>中獎名單</h2>
+  <div *ngIf="gameInfo">
+    <p>
+      <span *ngIf="gameInfo.startTime">
+        開始時間: {{ gameInfo.startTime | date: 'yyyy/MM/dd h:mm a' }}
+      </span>
+      <span *ngIf="gameInfo.endTime">
+        ~ 結束時間: {{ gameInfo.endTime | date: 'yyyy/MM/dd h:mm a' }}</span>
+    </p>
     <ul>
-      <li *ngFor="let winner of winners">
-        {{ winner.prize }} - {{ winner.winner }}
+      <li *ngFor="let winner of winnerList$ | async">
+        {{ winner }}
       </li>
     </ul>
-    <button (click)="resetResult()">重新抽獎</button>
-    <button (click)="saveResult()">儲存</button>
+    <div *ngIf="gameInfo.endTime">
+      <input type="number" #numberOfwinners placeholder="幾位贏家" value="1" />
+      <input type="text" #prizeItem placeholder="獎項" value="" />
+      <button (click)="drawWinner(numberOfwinners.value, prizeItem.value)">抽獎</button>
+      <h2>中獎名單</h2>
+      <ul>
+        <li *ngFor="let winner of gameInfo.winners">
+          {{ winner.prize }} - {{ winner.winner }}
+        </li>
+      </ul>
+      <button (click)="resetResult()">重新抽獎</button>
+      <button (click)="saveResult()">儲存</button>
+    </div>
   </div>
 </div>
