--- a/client/src/app/youtube/chat/chat.component.html
+++ b/client/src/app/youtube/chat/chat.component.html
@@ -7,9 +7,9 @@
 
   </li>
 </ul>
-<div *ngIf="isCapturingMessage">
+<div *ngIf="isCapturingMessage | async">
   <button (click)="stop()">停止監看聊天訊息</button>
-  <h2>聊天訊息</h2>
+  <h2>{{ eventTitle | async }} 聊天訊息</h2>
   <ul>
     <li *ngFor="let message of messages$ | async; trackBy: mesageTrackByFn">
       {{ message.displayName }} - {{ message.displayMessage }}
@@ -18,7 +18,20 @@
 </div>
 <hr />
 <div>
-  <h2>活動抽獎</h2>
+  <h2>抽獎活動</h2>
+  <label>活動獎品</label>
+  <form [formGroup]="game">
+    <div formArrayName="prizes">
+      <div *ngFor="let prize of prizes.controls; index as i" [formGroupName]="i">
+        <label>獎品</label>
+        <input formControlName="prizeItem" type="text" />
+        <label>名額</label>
+        <input formControlName="numberOfWinner" type="number" size="4" />
+        <button (click)="removePrize(i)">移除獎項</button>
+      </div>
+    </div>
+    <button (click)="addPrize()">新增獎項</button>
+  </form>
   <label>通關密語</label>
   <input type="text" #keyword/>
   <button (click)="startPrizeDraw(keyword.value)" *ngIf="!isEventStart">開始</button>
@@ -37,9 +50,7 @@
       </li>
     </ul>
     <div *ngIf="gameInfo.endTime">
-      <input type="number" #numberOfwinners placeholder="幾位贏家" value="1" />
-      <input type="text" #prizeItem placeholder="獎項" value="" />
-      <button (click)="drawWinner(numberOfwinners.value, prizeItem.value)">抽獎</button>
+      <button (click)="drawWinner()">開始抽獎</button>
       <h2>中獎名單</h2>
       <ul>
         <li *ngFor="let winner of gameInfo.winners">
