--- a/client/src/app/youtube/chat/chat.component.html
+++ b/client/src/app/youtube/chat/chat.component.html
@@ -23,7 +23,9 @@
     <div class="col-md-8">
       <div class="row">
         <div class="col-sm-12 mb15">
+          <button (click)="test()">test</button>
           <h2>抽獎活動</h2>
+          <a [href]="displayUrl" target="_blank">顯示畫面</a>
           <h3>活動獎品</h3>
           <form [formGroup]="game" class="form-inline">
             <div formArrayName="prizes" class="mb15">
@@ -70,7 +72,7 @@
               </li>
             </ul>
             <button (click)="resetResult()">重新抽獎</button>
-            <button (click)="saveResult()">儲存</button>
+            <button (click)="saveResult()">儲存抽獎結果</button>
           </div>
         </div>
       </div>
