Refactor prize component

--- a/client/src/app/youtube/chat/chat.component.html
+++ b/client/src/app/youtube/chat/chat.component.html
@@ -21,61 +21,7 @@
       </div>
     </div>
     <div class="col-md-8">
-      <div class="row">
-        <div class="col-sm-12 mb15">
-          <button (click)="test()">test</button>
-          <h2>抽獎活動</h2>
-          <a [href]="displayUrl" target="_blank">顯示畫面</a>
-          <h3>活動獎品</h3>
-          <form [formGroup]="game" class="form-inline">
-            <div formArrayName="prizes" class="mb15">
-              <div class="form-group" *ngFor="let prize of prizes.controls; index as i" [formGroupName]="i">
-                <label>獎品</label>
-                <input class="form-control" formControlName="prizeItem" type="text" />
-                <label>名額</label>
-                <input class="form-control input-sm-1" formControlName="numberOfWinner" type="number" size="4" />
-                <button class="btn btn-sm btn-warning" (click)="removePrize(i)" [disabled]="isEventStart | async">移除獎項</button>
-              </div>
-            </div>
-            <button class="btn btn-sm btn-primary" (click)="addPrize()" [disabled]="isEventStart | async">新增獎項</button>
-          </form>
-        </div>
-        <div class="col-sm-12 mb15">
-          <div class="form-inline">
-            <div class="form-group">
-              <label>通關密語</label>
-              <input class="form-control" type="text" #keyword/>
-            </div>
-            <button class="btn btn-sm btn-default" (click)="startPrizeDraw(keyword.value)" *ngIf="!(isEventStart | async)">開始</button>
-            <button class="btn btn-sm btn-default" (click)="stopPrizeDraw()" *ngIf="isEventStart | async">結束</button>
-          </div>
-        </div>
-        <div class="col-sm-12" *ngIf="gameInfo">
-          <p>
-            <span *ngIf="gameInfo.startTime">
-              開始時間: {{ gameInfo.startTime | date: 'yyyy/MM/dd h:mm a' }}
-            </span>
-            <span *ngIf="gameInfo.endTime">
-              ~ 結束時間: {{ gameInfo.endTime | date: 'yyyy/MM/dd h:mm a' }}</span>
-          </p>
-          <ul>
-            <li *ngFor="let winner of winnerList$ | async">
-              {{ winner }}
-            </li>
-          </ul>
-          <div *ngIf="gameInfo.endTime">
-            <button (click)="drawWinner()">開始抽獎</button>
-            <h2>中獎名單</h2>
-            <ul>
-              <li *ngFor="let winner of gameInfo.winners">
-                {{ winner.prize }} - {{ winner.winner }}
-              </li>
-            </ul>
-            <button (click)="resetResult()">重新抽獎</button>
-            <button (click)="saveResult()">儲存抽獎結果</button>
-          </div>
-        </div>
-      </div>
+      <app-prize [eventTitle]="eventTitle | async"></app-prize>
     </div>
   </div>
 </div>
